--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "mbr-state",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "state manager",
-  "main": "state.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
